<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.udacity.asteroidradar.detail.DetailViewModel" />

        <variable
            name="asteroid"
            type="com.udacity.asteroidradar.domain.Asteroid" />

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/app_background">

            <ImageView
                android:id="@+id/potentially_hazardous_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                app:asteroidStatusImage="@{viewModel.selectedAsteroid.potentiallyHazardous}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:statusImageContentDescription="@{viewModel.selectedAsteroid.potentiallyHazardous}"
                tools:ignore="ContentDescription"
                tools:srcCompat="@drawable/asteroid_safe" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/potentially_hazardous_image">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="true"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/asteroid_codename_title"
                        android:textColor="@color/default_text_color" />

                    <TextView
                        android:id="@+id/asteroid_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:text="@{viewModel.selectedAsteroid.codename}"
                        android:textColor="@color/default_text_color"
                        tools:text="2020-02-01" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:focusable="true"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/close_approach_data_title"
                        android:textColor="@color/default_text_color" />

                    <TextView
                        android:id="@+id/close_approach_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:text="@{viewModel.selectedAsteroid.formattedDate}"
                        android:textColor="@color/default_text_color"
                        tools:text="2020-02-01" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:focusable="true"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/absolute_magnitude_title"
                            android:textColor="@color/default_text_color" />

                        <TextView
                            android:id="@+id/absolute_magnitude"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="4dp"
                            android:textColor="@color/default_text_color"
                            app:astronomicalUnitText="@{viewModel.selectedAsteroid.absoluteMagnitude}"
                            tools:text="25.126 au" />
                    </LinearLayout>

                    <ImageView
                        android:id="@+id/help_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/astronomical_unit_explanation_button"
                        android:padding="16dp"
                        app:srcCompat="@drawable/ic_help_circle" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:focusable="true"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/estimated_diameter_title"
                        android:textColor="@color/default_text_color" />

                    <TextView
                        android:id="@+id/estimated_diameter"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:textColor="@color/default_text_color"
                        app:kmUnitText="@{viewModel.selectedAsteroid.estimatedDiameter}"
                        tools:text="0.82 km" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:focusable="true"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/relative_velocity_title"
                        android:textColor="@color/default_text_color" />

                    <TextView
                        android:id="@+id/relative_velocity"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:textColor="@color/default_text_color"
                        app:velocityText="@{viewModel.selectedAsteroid.relativeVelocity}"
                        tools:text="11.9 km/s" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:focusable="true"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/distance_from_earth_title"
                        android:textColor="@color/default_text_color" />

                    <TextView
                        android:id="@+id/distance_from_earth"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:textColor="@color/default_text_color"
                        app:astronomicalUnitText="@{viewModel.selectedAsteroid.distanceFromEarth}"
                        tools:text="0.0924 au" />
                </LinearLayout>
            </LinearLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>